export type MenuItem={id:number;name:string;category:string;price:number;description:string;imageUrl:string;featured:boolean;available:boolean;preparationMinutes:number}
export type PreOrderItem={id:number;menuItemId:number;itemName:string;unitPrice:number;quantity:number;status:'REQUESTED'|'CONFIRMED'|'CANCELLED';lineTotal:number}
export type RestaurantTable={id:number;code:string;name:string;floor:string;area:string;seats:number;status:'AVAILABLE'|'RESERVED'|'OCCUPIED'|'NEEDS_CLEANING'|'INACTIVE';active:boolean;layoutX:number;layoutY:number;shape:'ROUND'|'RECTANGLE';publicToken:string}
export type AvailableTable=Pick<RestaurantTable,'id'|'code'|'name'|'area'|'seats'|'layoutX'|'layoutY'|'shape'>
export type AssignedTable=Omit<AvailableTable,'publicToken'>&{floor:string;status:RestaurantTable['status']}
export type Reservation={id:number;code:string;customerName:string;phone:string;email?:string;reservationDate:string;timeSlot:'LUNCH'|'DINNER';partySize:number;reservationTime:string;durationMinutes:number;holdExpiresAt:string;preferredFloor?:string;note?:string;status:string;source:'ONLINE'|'WALK_IN';createdAt:string;confirmedAt?:string;checkedInAt?:string;completedAt?:string;notifyEmail:boolean;notifySms:boolean;preOrderItems:PreOrderItem[];assignedTables:AssignedTable[];serviceSessionId?:number;assignedStaffId?:number;assignedStaffName?:string;assignedStaffEmail?:string;staffAssignedAt?:string;openOrderCount:number;paid:boolean;depositAmount:number;depositStatus:'PENDING'|'PAID';depositMethod?:'QR'|'PAYPAL';depositPaidAt?:string}
export type ReservationStatusEvent={id:number;reservationId:number;fromStatus:string;toStatus:string;actor:string;reason:string;createdAt:string}
export type AuthUser={accessToken:string;id:number;fullName:string;email:string;role:'ADMIN'|'STAFF'|'KITCHEN'|'CUSTOMER'}
export type UserStats={totalCount:number;adminCount:number;employeeCount:number;customerCount:number;activeCount:number}
export type OperationsReport={reservationsToday:number;pendingReservations:number;activeSessions:number;invoicesThisMonth:number;revenueToday:number;revenueThisMonth:number}
export type UserSummary={id:number;fullName:string;email:string;role:AuthUser['role'];active:boolean;createdAt:string}
export type TableOverview=RestaurantTable&{serviceState:'EMPTY'|'RESERVED'|'DINING'|'WAITING_KITCHEN'|'NEEDS_SERVING'|'NEEDS_CLEANING'|'INACTIVE';reservationId?:number;reservationCode?:string;customerName?:string;customerPhone?:string;partySize?:number;serviceSessionId?:number;assignedStaffId?:number;assignedStaffName?:string;assignedStaffEmail?:string;staffAssignedAt?:string;openOrderCount:number;readyOrderCount:number}
export type WaiterLoadLevel='NORMAL'|'BUSY'|'OVERLOADED'
export type WaiterSummary={id:number;fullName:string;email:string;shiftId:number;shiftEndsAt:string;sessionCount:number;tableCount:number;guestCount:number;tableCodes:string[];loadLevel:WaiterLoadLevel;recommended:boolean}
export type WaiterAssignment={serviceSessionId:number;staffId?:number;staffName?:string;staffEmail?:string;assignedBy:string;assignedAt:string}
export type WaiterAssignmentEvent={id:number;serviceSessionId:number;reservationId:number;action:'CLAIM'|'ASSIGN'|'TRANSFER'|'UNASSIGN';fromStaffId?:number;fromStaffName?:string;toStaffId?:number;toStaffName?:string;actor:string;reason:string;createdAt:string}
export type StaffShift={id:number;staffId:number;staffName:string;staffEmail:string;startsAt:string;endsAt:string;status:'SCHEDULED'|'ACTIVE'|'COMPLETED'|'CANCELLED';actualStartedAt?:string;actualEndedAt?:string;createdBy:string;createdAt:string;onDuty:boolean}
export type CheckoutLine={itemName:string;quantity:number;unitPrice:number;lineTotal:number}
export type Checkout={serviceSessionId:number;reservationId:number;reservationCode:string;customerName:string;tableCodes:string[];partySize:number;items:CheckoutLine[];subtotal:number;openOrderCount:number;paid:boolean;paymentId?:number;invoiceCode?:string;discountAmount:number;totalAmount:number;paymentMethod?:'CASH'|'BANK_TRANSFER'|'QR'|'CARD'|'PAYPAL';paidAt?:string}
export type PayPalConfig={enabled:boolean;clientId:string;currency:string;vndPerUsd:number}
export type PayPalOrder={orderId:string;status:string;currency:string;amount:number;approvalUrl?:string}
export type DiningOrderItemStatus='SUBMITTED'|'PREPARING'|'DELAYED'|'READY'|'SERVED'|'CANCELLED'
export type DiningOrderItem={id:number;menuItemId:number;itemName:string;unitPrice:number;quantity:number;lineTotal:number;status:DiningOrderItemStatus;preparationMinutes:number;estimatedReadyAt:string;startedAt?:string;delayedUntil?:string;delayReason?:string;readyAt?:string;servedAt?:string}
export type DiningOrder={id:number;serviceSessionId:number;reservationId:number;reservationCode:string;customerName:string;tableCodes:string[];status:'SUBMITTED'|'PREPARING'|'READY'|'SERVED'|'CANCELLED';source:'PREORDER'|'TABLE_ORDER';note?:string;createdAt:string;updatedAt:string;items:DiningOrderItem[];total:number}
export type Notification={id:number;reservationId?:number;type:string;channel:'IN_APP'|'EMAIL'|'SMS';status:'PENDING'|'SENT'|'DEMO'|'FAILED';title:string;message:string;createdAt:string;readAt?:string}
export type TableRequest={id:number;tableId:number;serviceSessionId?:number;type:'CALL_WAITER'|'WATER'|'UTENSILS'|'PAYMENT';status:'NEW'|'ACKNOWLEDGED'|'DONE'|'CANCELLED';note?:string;createdAt:string}
export type GuestTable={id:number;code:string;name:string;area:string;seats:number;activeSession:boolean;assignedStaffName?:string;requests:TableRequest[]}
export type OperationalTimeout={id:number;type:'RESERVATION_HOLD'|'RESERVATION_CONFIRMATION'|'CUSTOMER_LATE'|'KITCHEN_SLA'|'SERVICE_REQUEST_ACK'|'TABLE_CLEANING';severity:'WARNING'|'CRITICAL';status:'OPEN'|'RESOLVED';entityType:string;entityId:number;reservationId?:number;tableId?:number;title:string;details:string;deadlineAt:string;openedAt:string;resolvedAt?:string;resolutionNote?:string;assignedTo?:string;assignedAt?:string;acknowledgedBy?:string;acknowledgedAt?:string;resolvedBy?:string}
export type OperationalTimeoutEvent={id:number;timeoutId:number;action:string;actor:string;fromAssignee?:string;toAssignee?:string;note?:string;createdAt:string}
export type TimeoutPolicy={reservationHoldMinutes:number;reservationConfirmationMinutes:number;cleaningBufferMinutes:number;upcomingAlertMinutes:number;lateWarningMinutes:number;lateCriticalMinutes:number;tableRequestAckMinutes:number;kitchenPrewarningMinutes:number;kitchenWaiterEscalationMinutes:number;kitchenCriticalOverdueMinutes:number;cleaningTargetMinutes:number}
export type WalkInStatus='WAITING'|'TABLE_OFFERED'|'SEATED'|'DINING'|'PAYMENT_REQUESTED'|'CLEANING'|'COMPLETED'|'LEFT'|'NO_RESPONSE'|'CANCELLED'
export type WalkInSla='NORMAL'|'WARNING'|'CRITICAL'
export type WalkInPriority='NORMAL'|'ACCESSIBILITY'|'ELDERLY'|'MANAGER'
export type WalkInTableSuggestion={id:number;code:string;name:string;area:string;seats:number;seatWaste:number;availableAt:string;nextOnlineReservationAt?:string;safe:boolean;reason:string}
export type WalkInEvent={id:number;fromStatus?:WalkInStatus;toStatus:WalkInStatus;action:string;note?:string;actor:string;createdAt:string}
export type WalkInVisit={id:number;code:string;customerName:string;phone?:string;partySize:number;areaPreference?:string;priority:WalkInPriority;priorityReason?:string;status:WalkInStatus;slaLevel:WalkInSla;slaMessage:string;slaDeadlineAt:string;elapsedMinutes:number;quotedWaitMinutes:number;expectedSeatAt:string;offeredAt?:string;offerExpiresAt?:string;seatedAt?:string;paymentRequestedAt?:string;cleaningStartedAt?:string;completedAt?:string;tableId?:number;tableCode?:string;reservationId?:number;serviceSessionId?:number;callCount:number;note?:string;suggestedTables:WalkInTableSuggestion[];events:WalkInEvent[]}
export type WalkInMetrics={totalVisits:number;activeVisits:number;averageWaitMinutes:number;p90WaitMinutes:number;quoteAccuracyPercent:number;abandonmentPercent:number;averageCleaningMinutes:number}
